Fix bug display on IE

--- a/Assignment/css/style.css
+++ b/Assignment/css/style.css
@@ -173,7 +173,7 @@ a {
 	.content .row-categories > div {
 		text-align: center;
 		display: inline-block;
-		width: 19.65%;
+		width: 19.6%;
 	}
 
 .row-products {
